--- a/wedding.html
+++ b/wedding.html
@@ -8,18 +8,18 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Nền tảng tạo website đám cưới miễn phí!</title>
-<link rel="icon" type="image/png" href="../static/favicon/favicon.png" />
+<link rel="icon" type="image/png" href="/static/favicon/favicon.png" />
 <link rel="preconnect" href="https://fonts.googleapis.com/">
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../static/css/libs.bundle2b87.css?v=20210926" />
-<link rel="stylesheet" href="../static/css/theme.bundle2b87.css?v=20210926" />
-<link rel="stylesheet" href="../static/css/themef9f5.css?v=202111121" />
+<link rel="stylesheet" href="/static/css/libs.bundle2b87.css" />
+<link rel="stylesheet" href="/static/css/theme.bundle2b87.css?v=20210926" />
+<link rel="stylesheet" href="/static/css/themef9f5.css?v=202111121" />
 <meta property="og:site_name" content="biihappy.com">
 <meta property="og:type" content="website">
 <meta property="og:url" content="wedding.html">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:domain" content="../index.html">
+<meta name="twitter:domain" content="/wedding.html">
 <meta name="twitter:site" content="biihappy.com">
 <meta property="og:title" content="Nền tảng tạo website đám cưới miễn phí! - Biihappy.com">
 <meta itemprop="name" content="Nền tảng tạo website đám cưới miễn phí! - Biihappy.com">
@@ -54,8 +54,8 @@ gtag('config', 'G-P4QBSSV7TG');
     <div id="fb-customer-chat" class="fb-customerchat"></div>
 	<nav class="navbar-top navbar navbar-expand-lg navbar-light py-2 bg-white fixed-top border-bottom">
 		<div class="container">
-			<a class="navbar-brand" href="../index.html">
-			<img src="../static/img/logo.png" class="navbar-brand-img" alt="...">
+			<a class="navbar-brand" href="/wedding.html">
+			<img src="/static/img/logo.png" class="navbar-brand-img" alt="...">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -66,7 +66,7 @@ gtag('config', 'G-P4QBSSV7TG');
 				</button>
 				<ul class="navbar-nav ms-auto">
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="../index.html">
+						<a class="nav-link dropdown-toggle" href="wedding.html">
 						Trang chủ						</a>
 					</li>
 					<li class="nav-item dropdown">
@@ -84,10 +84,6 @@ gtag('config', 'G-P4QBSSV7TG');
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="survey.html">
 						Đánh giá						</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="https://blog.biihappy.com/" target="_blank">
-						Blog						</a>
 					</li>
 				</ul>
 								<a class="navbar-btn btn btn-sm btn-danger ms-auto" href="user/login.html">Đăng nhập</a>
