--- a/contact.html
+++ b/contact.html
@@ -7,36 +7,38 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Liên hệ với chúng tôi - Biihappy.com</title>
-<link rel="icon" type="image/png" href="../static/favicon/favicon.png" />
+<title>Nền tảng tạo website đám cưới miễn phí!</title>
+<link rel="icon" type="image/png" href="/static/favicon/favicon.png" />
 <link rel="preconnect" href="https://fonts.googleapis.com/">
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../static/css/libs.bundle2b87.css?v=20210926" />
-<link rel="stylesheet" href="../static/css/theme.bundle2b87.css?v=20210926" />
-<link rel="stylesheet" href="../static/css/themef9f5.css?v=202111121" />
+<link rel="stylesheet" href="/static/css/libs.bundle2b87.css" />
+<link rel="stylesheet" href="/static/css/theme.bundle2b87.css?v=20210926" />
+<link rel="stylesheet" href="/static/css/themef9f5.css?v=202111121" />
 <meta property="og:site_name" content="biihappy.com">
 <meta property="og:type" content="website">
-<meta property="og:url" content="contact.html">
+<meta property="og:url" content="wedding.html">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:domain" content="../index.html">
+<meta name="twitter:domain" content="/wedding.html">
 <meta name="twitter:site" content="biihappy.com">
-<meta property="og:title" content="Liên hệ với chúng tôi - Biihappy.com">
-<meta itemprop="name" content="Liên hệ với chúng tôi - Biihappy.com">
-<meta name="description" content="Chúng tôi luôn mong muốn được nghe ý kiến của bạn! Hãy cho chúng tôi biết cách chúng tôi có thể giúp bạn tốt nhất và chúng tôi sẽ cố gắng hết sức.">
-<meta property="og:description" content="Chúng tôi luôn mong muốn được nghe ý kiến của bạn! Hãy cho chúng tôi biết cách chúng tôi có thể giúp bạn tốt nhất và chúng tôi sẽ cố gắng hết sức.">
-<meta name="twitter:description" content="Chúng tôi luôn mong muốn được nghe ý kiến của bạn! Hãy cho chúng tôi biết cách chúng tôi có thể giúp bạn tốt nhất và chúng tôi sẽ cố gắng hết sức.">
-<meta property="og:image" content="../static/img/contact-us.jpg">
-<meta property="og:image:url" content="../static/img/contact-us.jpg">
-<meta property="og:image:secure_url" content="../static/img/contact-us.jpg">
-<meta property="twitter:image:src" content="../static/img/contact-us.jpg">
-<meta itemprop="image" content="../static/img/contact-us.jpg">
+<meta property="og:title" content="Nền tảng tạo website đám cưới miễn phí! - Biihappy.com">
+<meta itemprop="name" content="Nền tảng tạo website đám cưới miễn phí! - Biihappy.com">
+<meta name="description" content="Hãy xây dựng một website tuyệt vời cho ngày cưới của bạn, để câu chuyện tình yêu và sự kiện trọng đại được lưu giữ mãi theo thời gian.">
+<meta property="og:description" content="Hãy xây dựng một website tuyệt vời cho ngày cưới của bạn, để câu chuyện tình yêu và sự kiện trọng đại được lưu giữ mãi theo thời gian.">
+<meta name="twitter:description" content="Hãy xây dựng một website tuyệt vời cho ngày cưới của bạn, để câu chuyện tình yêu và sự kiện trọng đại được lưu giữ mãi theo thời gian.">
+<meta property="og:image" content="/static/img/featured.png">
+<meta property="og:image:url" content="/static/img/featured.png">
+<meta property="og:image:secure_url" content="/static/img/featured.png">
+<meta property="twitter:image:src" content="/static/img/featured.png">
+<meta itemprop="image" content="/static/img/featured.png">
 <meta name="csrf-param" content="_csrf-biihappy">
-<meta name="csrf-token" content="IfXBMqoK7lbVojmPCk8qF9wDkq7ZmFQInGzxL1HAJMVEtIBln0mgLODAfcM7I2tNukSm57PUAmLkVIF_ZadNgg==">
+<meta name="csrf-token" content="3W6rXH3oIR-ZhLWYhiJd5hg5QH8Tuiuc1uegHepZnsu4L-oLSKtvZazm8dS3Thy8fn50Nnn2ffau39BN3j73jA==">
 
-<link href="contact.html" rel="canonical"><script async src="../../pagead2.googlesyndication.com/pagead/js/fce9c.txt?client=ca-pub-4639759901640537" crossorigin="anonymous"></script>
+<link href="wedding.html" rel="canonical">
+<!-- <script async src="../../pagead2.googlesyndication.com/pagead/js/fce9c.txt?client=ca-pub-4639759901640537" crossorigin="anonymous"></script> -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-P4QBSSV7TG"></script>
+<!-- <script async src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js"></script> -->
 <script>
 window.dataLayer = window.dataLayer || [];
 function gtag(){dataLayer.push(arguments);}
@@ -52,8 +54,8 @@ gtag('config', 'G-P4QBSSV7TG');
     <div id="fb-customer-chat" class="fb-customerchat"></div>
 	<nav class="navbar-top navbar navbar-expand-lg navbar-light py-2 bg-white fixed-top border-bottom">
 		<div class="container">
-			<a class="navbar-brand" href="../index.html">
-			<img src="../static/img/logo.png" class="navbar-brand-img" alt="...">
+			<a class="navbar-brand" href="/wedding.html">
+			<img src="/static/img/logo.png" class="navbar-brand-img" alt="...">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -64,7 +66,7 @@ gtag('config', 'G-P4QBSSV7TG');
 				</button>
 				<ul class="navbar-nav ms-auto">
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="../index.html">
+						<a class="nav-link dropdown-toggle" href="/wedding.html">
 						Trang chủ						</a>
 					</li>
 					<li class="nav-item dropdown">
@@ -82,10 +84,6 @@ gtag('config', 'G-P4QBSSV7TG');
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="survey.html">
 						Đánh giá						</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="https://blog.biihappy.com/" target="_blank">
-						Blog						</a>
 					</li>
 				</ul>
 								<a class="navbar-btn btn btn-sm btn-danger ms-auto" href="user/login.html">Đăng nhập</a>
@@ -296,10 +294,10 @@ gtag('config', 'G-P4QBSSV7TG');
 		</div>
 	</div>
 	<div class="loading" style="display: none;">Loading&#8230;</div>
-	<script src="../static/libs/jquery.min3c8e.js?v=20210925"></script>
-	<script src="../static/js/vendor.bundlef9f5.js?v=202111121"></script>
-	<script src="../static/js/theme.bundlef9f5.js?v=202111121"></script>
-	<script src="../static/js/themee030.js?v=20211225"></script>
+	<script src="/static/libs/jquery.min3c8e.js?v=20210925"></script>
+	<script src="/static/js/vendor.bundlef9f5.js?v=202111121"></script>
+	<script src="/static/js/theme.bundlef9f5.js?v=202111121"></script>
+	<script src="/static/js/themee030.js?v=20211225"></script>
 	<script>
       var chatbox = document.getElementById('fb-customer-chat');
       chatbox.setAttribute("page_id", "107086671720382");
@@ -316,14 +314,14 @@ gtag('config', 'G-P4QBSSV7TG');
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
-        js.src = '../../connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
+        // js.src = '../../connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
-	<script src="../assets/705bcf32/yii.js"></script>
-<script src="../assets/705bcf32/yii.validation.js"></script>
-<script src="../assets/705bcf32/yii.captcha.js"></script>
-<script src="../assets/705bcf32/yii.activeForm.js"></script>
+	<script src="/assets/705bcf32/yii.js"></script>
+<script src="/assets/705bcf32/yii.validation.js"></script>
+<script src="/assets/705bcf32/yii.captcha.js"></script>
+<script src="/assets/705bcf32/yii.activeForm.js"></script>
 <script>jQuery(function ($) {
     $('form').on('beforeSubmit ', function (e) {
         $(this).find('button[type="submit"]').prepend(`
