--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-<HTML>
-<!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
+<html>
+  <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-<!-- Mirrored from biihappy.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:17 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=vi/wedding.html"><TITLE>Page has moved</TITLE>
-</HEAD>
-<BODY>
+  <!-- Mirrored from biihappy.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:17 GMT -->
+  <!-- Added by HTTrack --><meta
+    http-equiv="content-type"
+    content="text/html;charset=UTF-8"
+  /><!-- /Added by HTTrack -->
+  <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <meta http-equiv="Refresh" content="0; URL=vi/wedding.html" />
+    <title>Page has moved - Error</title>
+  </head>
+  <body></body>
+  <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 
-</BODY>
-<!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
-
-<!-- Mirrored from biihappy.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:17 GMT -->
-</HTML>
+  <!-- Mirrored from biihappy.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:17 GMT -->
+</html>
