test gitlab second

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta http-equiv="Refresh" content="0; URL=vi/wedding.html" />
-    <title>Page has moved - Error</title>
+    <title>Page has moved - Err</title>
   </head>
   <body></body>
   <!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
