fix FE part 2 done

--- a/GET.html
+++ b/GET.html
@@ -1,54 +1,90 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Not Found (#404)</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<link rel="icon" type="image/png" href="https://biihappy.com/static/favicon/favicon.png" />
-<link rel="stylesheet" href="https://biihappy.com/static/css/libs.bundle.css?v=20210925" />
-<link rel="stylesheet" href="https://biihappy.com/static/css/theme.bundle.css?v=20210925" />
-<link rel="stylesheet" href="https://biihappy.com/static/css/theme.css?v=202111121" />
-<meta name="csrf-param" content="_csrf-biihappy">
-<meta name="csrf-token" content="YBJ7s5B8ijOrGdJ44JNTtQBfBCDAQvieobFUlmCAPY4FUzrkpT_ESZ57ljTR_xLvZhgwaaoOrvTZiSTGVOdUyQ==">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Not Found (#404)</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://#/static/favicon/favicon.png"
+    />
+    <link
+      rel="stylesheet"
+      href="https://#/static/css/libs.bundle.css?v=20210925"
+    />
+    <link
+      rel="stylesheet"
+      href="https://#/static/css/theme.bundle.css?v=20210925"
+    />
+    <link
+      rel="stylesheet"
+      href="https://#/static/css/theme.css?v=202111121"
+    />
+    <meta name="csrf-param" content="_csrf-Behappy" />
+    <meta
+      name="csrf-token"
+      content="YBJ7s5B8ijOrGdJ44JNTtQBfBCDAQvieobFUlmCAPY4FUzrkpT_ESZ57ljTR_xLvZhgwaaoOrvTZiSTGVOdUyQ=="
+    />
 
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P4QBSSV7TG"></script>
-<script>
-window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-P4QBSSV7TG"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-gtag('config', 'G-P4QBSSV7TG');
-</script>
-</head>
-<body>
-<section class="section-border border-danger">
-    <div class="container d-flex flex-column">
-        <div class="row align-items-center justify-content-center gx-0 min-vh-100">
-            <div class="col-8 col-md-6 col-lg-7 offset-md-1 order-md-2 mt-auto mt-md-0 pt-8 pb-4 py-md-11">
-                <img src="https://biihappy.com/static/img/illustrations/illustration-1.png" alt="..." class="img-fluid">
+      gtag("config", "G-P4QBSSV7TG");
+    </script>
+  </head>
+  <body>
+    <section class="section-border border-danger">
+      <div class="container d-flex flex-column">
+        <div
+          class="row align-items-center justify-content-center gx-0 min-vh-100"
+        >
+          <div
+            class="col-8 col-md-6 col-lg-7 offset-md-1 order-md-2 mt-auto mt-md-0 pt-8 pb-4 py-md-11"
+          >
+            <img
+              src="https://#/static/img/illustrations/illustration-1.png"
+              alt="..."
+              class="img-fluid"
+            />
+          </div>
+          <div
+            class="col-12 col-md-5 col-lg-4 order-md-1 mb-auto mb-md-0 pb-8 py-md-11"
+          >
+            <h1 class="display-3 fw-bold text-left">Not Found (#404)</h1>
+            <div class="alert alert-danger">Không tìm thấy trang.</div>
+            <p class="mb-5 text-left text-muted">
+              The above error occurred while the Web server was processing your
+              request. Please contact us if you think this is a server error.
+              Thank you!
+            </p>
+            <div class="text-center">
+              <a class="btn btn-primary" href="/">Về trang chủ</a>
             </div>
-            <div class="col-12 col-md-5 col-lg-4 order-md-1 mb-auto mb-md-0 pb-8 py-md-11">
-                <h1 class="display-3 fw-bold text-left">
-                    Not Found (#404)                </h1>
-                <div class="alert alert-danger">
-                    Không tìm thấy trang.                </div>
-                <p class="mb-5 text-left text-muted">
-                    The above error occurred while the Web server was processing your request. Please contact us if you think this is a server error. Thank you!
-                </p>
-                <div class="text-center">
-                    <a class="btn btn-primary" href="/">Về trang chủ</a>
-                </div>
-            </div>
+          </div>
         </div>
-    </div>
-</section><script src="https://biihappy.com/static/libs/jquery.min.js?v=20210925"></script>
-<script src="https://biihappy.com/static/js/vendor.bundle.js?v=202111121"></script>
-<script src="https://biihappy.com/static/js/theme.bundle.js?v=202111121"></script>
-<script src="https://biihappy.com/static/js/theme.js?v=202111121"></script>
-<script src="/assets/705bcf32/yii.js"></script></body>
+      </div>
+    </section>
+    <script src="https://#/static/libs/jquery.min.js?v=20210925"></script>
+    <script src="https://#/static/js/vendor.bundle.js?v=202111121"></script>
+    <script src="https://#/static/js/theme.bundle.js?v=202111121"></script>
+    <script src="https://#/static/js/theme.js?v=202111121"></script>
+    <script src="/assets/705bcf32/yii.js"></script>
+  </body>
 </html>
