--- a/privacy.html
+++ b/privacy.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="vi" class="h-100">
 
-<!-- Mirrored from biihappy.com/vi/privacy by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:37 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Chính sách bảo mật - Biihappy.com</title>
+<title>Chính sách bảo mật - #</title>
 <link rel="icon" type="image/png" href="../static/favicon/favicon.png" />
 <link rel="preconnect" href="https://fonts.googleapis.com/">
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -15,23 +14,23 @@
 <link rel="stylesheet" href="../static/css/libs.bundle2b87.css?v=20210926" />
 <link rel="stylesheet" href="../static/css/theme.bundle2b87.css?v=20210926" />
 <link rel="stylesheet" href="../static/css/themef9f5.css?v=202111121" />
-<meta property="og:site_name" content="biihappy.com">
+<meta property="og:site_name" content="#">
 <meta property="og:type" content="website">
 <meta property="og:url" content="privacy.html">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:domain" content="../index.html">
-<meta name="twitter:site" content="biihappy.com">
-<meta property="og:title" content="Chính sách bảo mật - Biihappy.com">
-<meta itemprop="name" content="Chính sách bảo mật - Biihappy.com">
-<meta name="description" content="Biihappy hướng đến việc trở thành website mạng xã hội, nơi mà bạn có thể kết nối và chia sẻ những điều hạnh phúc đến mọi người trong cuộc sống.">
-<meta property="og:description" content="Biihappy hướng đến việc trở thành website mạng xã hội, nơi mà bạn có thể kết nối và chia sẻ những điều hạnh phúc đến mọi người trong cuộc sống.">
-<meta name="twitter:description" content="Biihappy hướng đến việc trở thành website mạng xã hội, nơi mà bạn có thể kết nối và chia sẻ những điều hạnh phúc đến mọi người trong cuộc sống.">
+<meta name="twitter:site" content="#">
+<meta property="og:title" content="Chính sách bảo mật - #">
+<meta itemprop="name" content="Chính sách bảo mật - #">
+<meta name="description" content="Behappy hướng đến việc trở thành website mạng xã hội, nơi mà bạn có thể kết nối và chia sẻ những điều hạnh phúc đến mọi người trong cuộc sống.">
+<meta property="og:description" content="Behappy hướng đến việc trở thành website mạng xã hội, nơi mà bạn có thể kết nối và chia sẻ những điều hạnh phúc đến mọi người trong cuộc sống.">
+<meta name="twitter:description" content="Behappy hướng đến việc trở thành website mạng xã hội, nơi mà bạn có thể kết nối và chia sẻ những điều hạnh phúc đến mọi người trong cuộc sống.">
 <meta property="og:image" content="../static/img/featured.png">
 <meta property="og:image:url" content="../static/img/featured.png">
 <meta property="og:image:secure_url" content="../static/img/featured.png">
 <meta property="twitter:image:src" content="../static/img/featured.png">
 <meta itemprop="image" content="../static/img/featured.png">
-<meta name="csrf-param" content="_csrf-biihappy">
+<meta name="csrf-param" content="_csrf-Behappy">
 <meta name="csrf-token" content="MmQ6b68wFk3XE8dZbXPXUmsopKxAIWlIoxSuWdQLFbdXJXs4mnNYN-JxgxVcH5YIDW-Q5SptPyLbLN4J4Gx88A==">
 
 <link href="privacy.html" rel="canonical"><script async src="../../pagead2.googlesyndication.com/pagead/js/fce9c.txt?client=ca-pub-4639759901640537" crossorigin="anonymous"></script>
@@ -84,7 +83,7 @@ gtag('config', 'G-P4QBSSV7TG');
 						Đánh giá						</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="https://blog.biihappy.com/" target="_blank">
+						<a class="nav-link dropdown-toggle" href="https://blog.#/" target="_blank">
 						Blog						</a>
 					</li>
 				</ul>
@@ -103,7 +102,7 @@ gtag('config', 'G-P4QBSSV7TG');
 					Ngày có hiệu lực: ngày 12 tháng 09 năm 2021
 				</p>
 				<p class="text-gray-700">
-					Chính sách bảo mật thông tin này nhằm giúp Quý khách hiểu về cách website thu thập và sử dụng thông tin cá nhân của mình thông qua việc sử dụng trang web, bao gồm mọi thông tin có thể cung cấp thông qua trang web khi bạn đăng ký sử dụng hoặc gửi thư góp ý về sản phẩm, dịch vụ của Biihappy. 
+					Chính sách bảo mật thông tin này nhằm giúp Quý khách hiểu về cách website thu thập và sử dụng thông tin cá nhân của mình thông qua việc sử dụng trang web, bao gồm mọi thông tin có thể cung cấp thông qua trang web khi bạn đăng ký sử dụng hoặc gửi thư góp ý về sản phẩm, dịch vụ của Behappy . 
 				</p>
 				<p class="text-gray-700">
 					Quan trọng là bạn cần thường xuyên kiểm tra lại để xem các bản cập nhật về Chính sách bảo mật. Chúng tôi có thể cập nhật định kỳ Chính sách bảo mật này để phản ánh những thay đổi trong cách chúng tôi xử lý thông tin cá nhân liên quan đến Dịch vụ hoặc những thay đổi trong luật hiện hành. Chúng tôi sẽ đăng thông báo trên trang web của chúng tôi để thông báo trước cho bạn về những thay đổi quan trọng trong Chính sách bảo mật và chỉ rõ ở phần đầu của Chính sách bảo mật thời điểm cập nhật gần nhất.
@@ -236,7 +235,7 @@ gtag('config', 'G-P4QBSSV7TG');
 							<i class="fe fe-check"></i>
 						</div>
 						<p>
-							Chúng tôi sử dụng cookies của trình duyệt để: Ghi nhớ thông tin đăng nhập để bạn sẽ không phải nhập lại nó trong lần truy cập tới của bạn vào dịch vụ Biihappy. Cung cấp tùy chỉnh, nội dung cá nhân và thông tin. Giám sát hiệu quả của các chiến dịch tiếp thị của chúng tôi. Giám sát số liệu tổng hợp như tổng số khách truy cập và lưu lượng truy cập. Chẩn đoán hoặc sửa chữa các vấn đề kỹ thuật được báo cáo bởi người sử dụng hoặc các nhân viên của chúng tôi. Truy vấn thông tin của bạn sau khi bạn đăng nhập.
+							Chúng tôi sử dụng cookies của trình duyệt để: Ghi nhớ thông tin đăng nhập để bạn sẽ không phải nhập lại nó trong lần truy cập tới của bạn vào dịch vụ Behappy . Cung cấp tùy chỉnh, nội dung cá nhân và thông tin. Giám sát hiệu quả của các chiến dịch tiếp thị của chúng tôi. Giám sát số liệu tổng hợp như tổng số khách truy cập và lưu lượng truy cập. Chẩn đoán hoặc sửa chữa các vấn đề kỹ thuật được báo cáo bởi người sử dụng hoặc các nhân viên của chúng tôi. Truy vấn thông tin của bạn sau khi bạn đăng nhập.
 						</p>
 					</li>
 				</ul>
@@ -336,7 +335,7 @@ gtag('config', 'G-P4QBSSV7TG');
 					Chúng tôi sẽ liên hệ và trao đổi thông tin thông qua địa chỉ e-mail mà bạn cung cấp khi đăng ký dịch vụ. Trường hợp có sự thay đổi hay phát hiện có sự sử dụng địa chỉ e-mail bất hợp pháp, bạn vui lòng thông báo ngay cho chúng tôi để có những biện pháp hỗ trợ kịp thời.
 				</p>
 				<p class="text-gray-700">
-					Xin vui lòng liên hệ với chúng tôi với bất kỳ câu hỏi hoặc nhận xét về Thỏa thuận bảo mật hoặc những trang web thuộc sở hữu của Biihappy qua email: <a href="mailto:info@biihappy.com">info@biihappy.com</a> và số điện thoại: 0906.521.623.
+					Xin vui lòng liên hệ với chúng tôi với bất kỳ câu hỏi hoặc nhận xét về Thỏa thuận bảo mật hoặc những trang web thuộc sở hữu của Behappy qua email: <a href="mailto:info@#">info@#</a> và số điện thoại: 0906.521.623.
 				</p>
 			</div>
 		</div>
@@ -370,7 +369,7 @@ gtag('config', 'G-P4QBSSV7TG');
 				<div class="col-12 text-center text-gray-700">
 					<div class="d-inline-block">
 						<span>&copy; Copyright 2022</span>,
-						<span>Biihappy cuộc sống mê ly!</span>
+						<span>Behappy cuộc sống mê ly!</span>
 					</div>
 									</div>
 			</div>
@@ -378,7 +377,6 @@ gtag('config', 'G-P4QBSSV7TG');
 				<div class="col-12 text-center">
 					<ul class="menu text-muted fw-bold order-1 justify-content-center">
 						<li class="menu-item"><a class="menu-link px-2 text-muted" href="about-us.html">Giới thiệu</a></li>
-						<li class="menu-item"><a class="menu-link px-2 text-muted" href="https://blog.biihappy.com/" target="_blank">Blog</a></li>
 						<li class="menu-item"><a class="menu-link px-2 text-muted" href="privacy.html">Chính sách bảo mật</a></li>
 						<li class="menu-item"><a class="menu-link px-2 text-muted" href="terms.html">Điều khoản sử dụng</a></li>
 						<li class="menu-item"><a class="menu-link px-2 text-muted" href="contact.html">Liên hệ</a></li>
@@ -432,5 +430,5 @@ gtag('config', 'G-P4QBSSV7TG');
     </script>
 	<script src="../assets/705bcf32/yii.js"></script></body>
 
-<!-- Mirrored from biihappy.com/vi/privacy by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:37 GMT -->
+<!-- Mirrored from #/vi/privacy by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:37 GMT -->
 </html>
