--- a/wedding.html
+++ b/wedding.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="vi" class="h-100">
 
-<!-- Mirrored from biihappy.com/vi/wedding by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:17 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<!-- Mirrored from #/vi/wedding by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:17 GMT -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,14 +15,14 @@
 <link rel="stylesheet" href="/static/css/libs.bundle2b87.css" />
 <link rel="stylesheet" href="/static/css/theme.bundle2b87.css?v=20210926" />
 <link rel="stylesheet" href="/static/css/themef9f5.css?v=202111121" />
-<meta property="og:site_name" content="biihappy.com">
+<meta property="og:site_name" content="#">
 <meta property="og:type" content="website">
 <meta property="og:url" content="wedding.html">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:domain" content="/wedding.html">
-<meta name="twitter:site" content="biihappy.com">
-<meta property="og:title" content="Nền tảng tạo website đám cưới miễn phí! - Biihappy.com">
-<meta itemprop="name" content="Nền tảng tạo website đám cưới miễn phí! - Biihappy.com">
+<meta name="twitter:site" content="#">
+<meta property="og:title" content="Nền tảng tạo website đám cưới miễn phí! - #">
+<meta itemprop="name" content="Nền tảng tạo website đám cưới miễn phí! - #">
 <meta name="description" content="Hãy xây dựng một website tuyệt vời cho ngày cưới của bạn, để câu chuyện tình yêu và sự kiện trọng đại được lưu giữ mãi theo thời gian.">
 <meta property="og:description" content="Hãy xây dựng một website tuyệt vời cho ngày cưới của bạn, để câu chuyện tình yêu và sự kiện trọng đại được lưu giữ mãi theo thời gian.">
 <meta name="twitter:description" content="Hãy xây dựng một website tuyệt vời cho ngày cưới của bạn, để câu chuyện tình yêu và sự kiện trọng đại được lưu giữ mãi theo thời gian.">
@@ -31,7 +31,7 @@
 <meta property="og:image:secure_url" content="../static/img/featured.png">
 <meta property="twitter:image:src" content="../static/img/featured.png">
 <meta itemprop="image" content="../static/img/featured.png">
-<meta name="csrf-param" content="_csrf-biihappy">
+<meta name="csrf-param" content="_csrf-Behappy">
 <meta name="csrf-token" content="3W6rXH3oIR-ZhLWYhiJd5hg5QH8Tuiuc1uegHepZnsu4L-oLSKtvZazm8dS3Thy8fn50Nnn2ffau39BN3j73jA==">
 
 <link href="wedding.html" rel="canonical">
@@ -99,7 +99,7 @@ gtag('config', 'G-P4QBSSV7TG');
 				</div>
 				<div class="col-12 col-md-7 col-lg-6 order-md-1 py-8">
 					<h1 class="display-3 text-center text-md-start">
-						Nền tảng tạo website đám cưới <span class="fw-bold">miễn phí</span> từ <span class="text-danger">Biihappy</span>
+						Nền tảng tạo website đám cưới <span class="fw-bold">miễn phí</span> từ <span class="text-danger">Behappy </span>
 					</h1>
 					<p class="lead text-center text-md-start text-muted mb-6 mb-lg-8">
 						Hãy tặng cho ngày cưới của bạn một wedding website tuyệt vời và hoàn toàn miễn phí.
@@ -113,8 +113,8 @@ gtag('config', 'G-P4QBSSV7TG');
 						</a>
 					</div>
 					<div class="text-center text-md-start">
-						<!--<a href="https://blog.biihappy.com/post/huong-dan-tao-website-dam-cuoi-tren-nen-tang-biihappy" class="text-muted" target="_blank">Bạn có thể xem <span class="fw-bold">hướng dẫn</span> tạo website tại đây.</a>-->
-						<a href="https://blog.biihappy.com/post/huong-dan-tao-website-dam-cuoi-tren-nen-tang-biihappy" class="text-muted" target="_blank">Click vào đây để xem <span class="fw-bold">hướng dẫn</span> tạo website.</a>
+						<!--<a href="https://blog.#/post/huong-dan-tao-website-dam-cuoi-tren-nen-tang-Behappy" class="text-muted" target="_blank">Bạn có thể xem <span class="fw-bold">hướng dẫn</span> tạo website tại đây.</a>-->
+						<a href="https://blog.#/post/huong-dan-tao-website-dam-cuoi-tren-nen-tang-Behappy" class="text-muted" target="_blank">Click vào đây để xem <span class="fw-bold">hướng dẫn</span> tạo website.</a>
 					</div>
 				</div>
 			</div>
@@ -218,7 +218,7 @@ gtag('config', 'G-P4QBSSV7TG');
 						Tại sao nên xây dựng website đám cưới?
 					</h3>
 					<p class="fs-lg text-muted mb-7 mb-md-9">
-						Sống trong thời đại công nghệ số, tại sao chúng ta không có một website cưới của riêng mình? Thật đơn giản để sở hữu một giao diện tạo website đám cưới với các tính năng độc đáo, nghệ thuật. Và đặc biệt, nó hoàn toàn <strong>Miễn Phí</strong> với Biihappy.
+						Sống trong thời đại công nghệ số, tại sao chúng ta không có một website cưới của riêng mình? Thật đơn giản để sở hữu một giao diện tạo website đám cưới với các tính năng độc đáo, nghệ thuật. Và đặc biệt, nó hoàn toàn <strong>Miễn Phí</strong> với Behappy .
 					</p>
 				</div>
 			</div>
@@ -235,14 +235,14 @@ gtag('config', 'G-P4QBSSV7TG');
 						<img src="../static/img/wedding/icons/share_icon.svg" width="40" alt="Dễ dàng chia sẻ câu chuyện tình yêu của bạn cho bạn bè" />
 					</div>
 					<h3 class="fw-bold">Dễ dàng chia sẻ câu chuyện tình yêu của bạn cho bạn bè</h3>
-					<p class="text-muted mb-8 mb-lg-0">Không phải lúc nào bạn cũng có thời gian để kể câu chuyện tình yêu của bạn cho từng người. Hãy cùng Biihappy xuất bản câu chuyện tình yêu của bạn và chia sẻ nó đến tất cả mọi người.</p>
+					<p class="text-muted mb-8 mb-lg-0">Không phải lúc nào bạn cũng có thời gian để kể câu chuyện tình yêu của bạn cho từng người. Hãy cùng Behappy xuất bản câu chuyện tình yêu của bạn và chia sẻ nó đến tất cả mọi người.</p>
 				</div>
 				<div class="col-12 col-md-6 col-lg-4 text-center">
 					<div class="icon-circle bg-dark text-white mb-5">
 						<img src="../static/img/wedding/icons/save_icon.svg" width="35" alt="Lưu giữ mãi mãi và dễ dàng chia sẻ album cưới online" />
 					</div>
 					<h3 class="fw-bold">Lưu giữ mãi mãi và dễ dàng chia sẻ album cưới online</h3>
-					<p class="text-muted mb-8 mb-md-0">Chẳng còn lo sợ cuốn album hình cưới bị hư hỏng hay đôi khi để ở đâu không tìm thấy. Đã có Biihappy lưu trữ giúp bạn, dễ dàng chia sẻ nó cho bất kỳ ai và bất kì đâu. Thật tuyệt vời đúng không!</p>
+					<p class="text-muted mb-8 mb-md-0">Chẳng còn lo sợ cuốn album hình cưới bị hư hỏng hay đôi khi để ở đâu không tìm thấy. Đã có Behappy lưu trữ giúp bạn, dễ dàng chia sẻ nó cho bất kỳ ai và bất kì đâu. Thật tuyệt vời đúng không!</p>
 				</div>
 				<div class="col-12 col-md-6 col-lg-4 text-center">
 					<div class="icon-circle bg-warning text-white mb-5">
@@ -273,7 +273,7 @@ gtag('config', 'G-P4QBSSV7TG');
 			<div class="row align-items-center justify-content-between mb-8 mb-md-11">
 				<div class="col-12 col-md-6 order-md-2">
 					<h2>
-						Các bước để bạn có thể tạo website đám cưới ấn tượng với Biihappy!<br>
+						Các bước để bạn có thể tạo website đám cưới ấn tượng với Behappy !<br>
 						<span class="text-danger">Mọi thứ đều rất <span id="typed1" data-typed='{"strings": ["dễ dàng.", "nhanh chóng."], "loop": true, "typeSpeed" : 50}'></span></span>
 					</h2>
 					<p class="fs-lg text-muted mb-6">
@@ -286,7 +286,7 @@ gtag('config', 'G-P4QBSSV7TG');
 									<strong>1</strong>
 								</div>
 								<p class="text-muted">
-									Tạo tài khoản và đăng nhập vào nền tảng Biihappy.
+									Tạo tài khoản và đăng nhập vào nền tảng Behappy .
 								</p>
 							</div>
 							<div class="d-flex">
@@ -318,7 +318,7 @@ gtag('config', 'G-P4QBSSV7TG');
 						</div>
 					</div>
 					<div class="mt-6">
-						<a target="_blank" href="https://blog.biihappy.com/post/huong-dan-tao-website-dam-cuoi-tren-nen-tang-biihappy" class="btn btn-danger-soft lift mb-3">
+						<a target="_blank" href="https://blog.#/post/huong-dan-tao-website-dam-cuoi-tren-nen-tang-Behappy" class="btn btn-danger-soft lift mb-3">
 						Xem hướng dẫn<i class="fe fe-arrow-right d-none d-md-inline ms-3"></i>
 						</a>
 					</div>
@@ -460,7 +460,7 @@ gtag('config', 'G-P4QBSSV7TG');
 					<span class="badge rounded-pill bg-gray-700-soft mb-4">
 					<span class="h6 fw-bold text-uppercase">Bắt đầu ngay thôi nào!</span>
 					</span>
-					<h3 class="display-4 text-white fs-1">Cảm ơn bạn vì đã lựa chọn Biihappy!</h3>
+					<h3 class="display-4 text-white fs-1">Cảm ơn bạn vì đã lựa chọn Behappy !</h3>
 					<p class="fs-lg text-muted mb-6 mb-md-8">
 						Còn chần chừ gì nữa? Hãy tặng cho ngày cưới của bạn một website tuyệt vời ngay bây giờ chỉ với vài thao tác nhỏ!
 					</p>
@@ -482,7 +482,7 @@ gtag('config', 'G-P4QBSSV7TG');
 				<div class="col-12 text-center text-gray-700">
 					<div class="d-inline-block">
 						<span>&copy; Copyright 2022</span>,
-						<span>Biihappy cuộc sống mê ly!</span>
+						<span>Behappy cuộc sống mê ly!</span>
 					</div>
 									</div>
 			</div>
@@ -490,7 +490,6 @@ gtag('config', 'G-P4QBSSV7TG');
 				<div class="col-12 text-center">
 					<ul class="menu text-muted fw-bold order-1 justify-content-center">
 						<li class="menu-item"><a class="menu-link px-2 text-muted" href="about-us.html">Giới thiệu</a></li>
-						<li class="menu-item"><a class="menu-link px-2 text-muted" href="https://blog.biihappy.com/" target="_blank">Blog</a></li>
 						<li class="menu-item"><a class="menu-link px-2 text-muted" href="privacy.html">Chính sách bảo mật</a></li>
 						<li class="menu-item"><a class="menu-link px-2 text-muted" href="terms.html">Điều khoản sử dụng</a></li>
 						<li class="menu-item"><a class="menu-link px-2 text-muted" href="contact.html">Liên hệ</a></li>
@@ -544,5 +543,5 @@ gtag('config', 'G-P4QBSSV7TG');
     </script>
 	<script src="../assets/705bcf32/yii.js"></script></body>
 
-<!-- Mirrored from biihappy.com/vi/wedding by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:26 GMT -->
+<!-- Mirrored from #/vi/wedding by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:26 GMT -->
 </html>
