--- a/wedding/sites.html
+++ b/wedding/sites.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="vi" class="h-100">
 
-<!-- Mirrored from biihappy.com/vi/wedding/sites by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:36 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<!-- Mirrored from #/vi/wedding/sites by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:36 GMT -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Danh sách website đám cưới đã được khách hàng tạo - Biihappy.com</title>
+<title>Danh sách website đám cưới đã được khách hàng tạo - #</title>
 <link rel="icon" type="image/png" href="../../static/favicon/favicon.png" />
 <link rel="preconnect" href="https://fonts.googleapis.com/">
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -15,23 +15,23 @@
 <link rel="stylesheet" href="../../static/css/libs.bundle2b87.css?v=20210926" />
 <link rel="stylesheet" href="../../static/css/theme.bundle2b87.css?v=20210926" />
 <link rel="stylesheet" href="../../static/css/themef9f5.css?v=202111121" />
-<meta property="og:site_name" content="biihappy.com">
+<meta property="og:site_name" content="#">
 <meta property="og:type" content="website">
 <meta property="og:url" content="sites.html">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:domain" content="../../index.html">
-<meta name="twitter:site" content="biihappy.com">
-<meta property="og:title" content="Danh sách website đám cưới đã được khách hàng tạo - Biihappy.com">
-<meta itemprop="name" content="Danh sách website đám cưới đã được khách hàng tạo - Biihappy.com">
-<meta name="description" content="Đã có 134 người dùng tạo website đám cưới từ Biihappy. Còn chần chừ gì nữa? Hãy tặng cho ngày cưới của bạn một website tuyệt vời ngay bây giờ!">
-<meta property="og:description" content="Đã có 134 người dùng tạo website đám cưới từ Biihappy. Còn chần chừ gì nữa? Hãy tặng cho ngày cưới của bạn một website tuyệt vời ngay bây giờ!">
-<meta name="twitter:description" content="Đã có 134 người dùng tạo website đám cưới từ Biihappy. Còn chần chừ gì nữa? Hãy tặng cho ngày cưới của bạn một website tuyệt vời ngay bây giờ!">
+<meta name="twitter:site" content="#">
+<meta property="og:title" content="Danh sách website đám cưới đã được khách hàng tạo - #">
+<meta itemprop="name" content="Danh sách website đám cưới đã được khách hàng tạo - #">
+<meta name="description" content="Đã có 134 người dùng tạo website đám cưới từ Behappy . Còn chần chừ gì nữa? Hãy tặng cho ngày cưới của bạn một website tuyệt vời ngay bây giờ!">
+<meta property="og:description" content="Đã có 134 người dùng tạo website đám cưới từ Behappy . Còn chần chừ gì nữa? Hãy tặng cho ngày cưới của bạn một website tuyệt vời ngay bây giờ!">
+<meta name="twitter:description" content="Đã có 134 người dùng tạo website đám cưới từ Behappy . Còn chần chừ gì nữa? Hãy tặng cho ngày cưới của bạn một website tuyệt vời ngay bây giờ!">
 <meta property="og:image" content="../../static/img/featured.png">
 <meta property="og:image:url" content="../../static/img/featured.png">
 <meta property="og:image:secure_url" content="../../static/img/featured.png">
 <meta property="twitter:image:src" content="../../static/img/featured.png">
 <meta itemprop="image" content="../../static/img/featured.png">
-<meta name="csrf-param" content="_csrf-biihappy">
+<meta name="csrf-param" content="_csrf-Behappy">
 <meta name="csrf-token" content="MvHVs5Y7ivKhFNEun64o9Xf-zveHowF1-P74viKnvcFXsJTko3jEiJR2lWKuwmmvEbn6vu3vVx-AxojuFsDUhg==">
 
 <link href="sites.html" rel="canonical"><script async src="../../../pagead2.googlesyndication.com/pagead/js/fce9c.txt?client=ca-pub-4639759901640537" crossorigin="anonymous"></script>
@@ -84,7 +84,7 @@ gtag('config', 'G-P4QBSSV7TG');
 						Đánh giá						</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="https://blog.biihappy.com/" target="_blank">
+						<a class="nav-link dropdown-toggle" href="https://blog.#/" target="_blank">
 						Blog						</a>
 					</li>
 				</ul>
@@ -98,7 +98,7 @@ gtag('config', 'G-P4QBSSV7TG');
 		<div class="row justify-content-center">
 			<div class="col-12 col-md-10 col-lg-8 text-center">
 				<h1 class="display-2 text-white">Danh sách websites</h1>
-				<p class="lead text-white-80 mb-6">Đã có <strong>134</strong> người dùng tạo website đám cưới từ Biihappy. Còn chần chừ gì nữa? Hãy tặng cho ngày cưới của bạn một website tuyệt vời ngay bây giờ!</p>
+				<p class="lead text-white-80 mb-6">Đã có <strong>134</strong> người dùng tạo website đám cưới từ Behappy . Còn chần chừ gì nữa? Hãy tặng cho ngày cưới của bạn một website tuyệt vời ngay bây giờ!</p>
 				<a href="templates.html" class="btn btn-danger lift">Tạo website đám cưới<i class="fe fe-arrow-right ms-3"></i></a>
 			</div>
 		</div>
@@ -116,7 +116,7 @@ gtag('config', 'G-P4QBSSV7TG');
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<form class="rounded shadow mb-4" action="https://biihappy.com/vi/wedding/sites">
+				<form class="rounded shadow mb-4" action="https://#/vi/wedding/sites">
 					<div class="input-group input-group-lg">
 						<span class="input-group-text border-0 pe-1"><i class="fe fe-search"></i></span>
 						<input class="form-control px-1 border-0" type="text" id="keyword" name="keyword" value="" aria-label="Nhập từ khóa tìm kiếm ..." placeholder="Nhập từ khóa tìm kiếm ...">
@@ -184,7 +184,7 @@ gtag('config', 'G-P4QBSSV7TG');
 		</div>
 	</div>
 		<div class="col-12 col-md-6 col-lg-4 d-flex mb-7 site-item" data-id="621a5f5145a01e4ce37902bb">
-		<div class="card pt-14 overlay overlay-black overlay-40 bg-cover shadow-light-lg" style="background-image: url(../../../cdn.biihappy.com/ziiweb/website/621a5f5145a01e4ce37902bb/06545180b3cd7cf3d64e2d261e5b1418.jpg);">
+		<div class="card pt-14 overlay overlay-black overlay-40 bg-cover shadow-light-lg" style="background-image: url(../../../cdn.#/ziiweb/website/621a5f5145a01e4ce37902bb/06545180b3cd7cf3d64e2d261e5b1418.jpg);">
 			
 			<div class="card-meta mt-auto mb-0 pb-0">
 				<div class="d-block w-100 text-center">
@@ -230,7 +230,7 @@ gtag('config', 'G-P4QBSSV7TG');
 		</div>
 	</div>
 		<div class="col-12 col-md-6 col-lg-4 d-flex mb-7 site-item" data-id="621a4ca15a23a3534357cdeb">
-		<div class="card pt-14 overlay overlay-black overlay-40 bg-cover shadow-light-lg" style="background-image: url(../../../cdn.biihappy.com/ziiweb/website/621a4ca15a23a3534357cdeb/a2bc42d370fd7b8ff74798af4cb124ae.jpg);">
+		<div class="card pt-14 overlay overlay-black overlay-40 bg-cover shadow-light-lg" style="background-image: url(../../../cdn.#/ziiweb/website/621a4ca15a23a3534357cdeb/a2bc42d370fd7b8ff74798af4cb124ae.jpg);">
 			
 			<div class="card-meta mt-auto mb-0 pb-0">
 				<div class="d-block w-100 text-center">
@@ -359,7 +359,7 @@ gtag('config', 'G-P4QBSSV7TG');
 				<div class="col-12 text-center text-gray-700">
 					<div class="d-inline-block">
 						<span>&copy; Copyright 2022</span>,
-						<span>Biihappy cuộc sống mê ly!</span>
+						<span>Behappy cuộc sống mê ly!</span>
 					</div>
 									</div>
 			</div>
@@ -367,7 +367,6 @@ gtag('config', 'G-P4QBSSV7TG');
 				<div class="col-12 text-center">
 					<ul class="menu text-muted fw-bold order-1 justify-content-center">
 						<li class="menu-item"><a class="menu-link px-2 text-muted" href="../about-us.html">Giới thiệu</a></li>
-						<li class="menu-item"><a class="menu-link px-2 text-muted" href="https://blog.biihappy.com/" target="_blank">Blog</a></li>
 						<li class="menu-item"><a class="menu-link px-2 text-muted" href="../privacy.html">Chính sách bảo mật</a></li>
 						<li class="menu-item"><a class="menu-link px-2 text-muted" href="../terms.html">Điều khoản sử dụng</a></li>
 						<li class="menu-item"><a class="menu-link px-2 text-muted" href="../contact.html">Liên hệ</a></li>
@@ -455,5 +454,5 @@ $('form').on('submit', function(e) {
 });
 });</script></body>
 
-<!-- Mirrored from biihappy.com/vi/wedding/sites by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:37 GMT -->
+<!-- Mirrored from #/vi/wedding/sites by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 27 Feb 2022 05:06:37 GMT -->
 </html>
