--- a/contact.html
+++ b/contact.html
@@ -231,7 +231,7 @@
               <!-- Link -->
               <div class="mb-5 mb-md-0">
                 <a
-                  href="https://www.facebook.com/Behappy .life/"
+                  href="#"
                   class="h4 text-gray-800"
                   target="_blank"
                 >
