--- a/wedding/templates.html
+++ b/wedding/templates.html
@@ -83,10 +83,6 @@ gtag('config', 'G-P4QBSSV7TG');
 						<a class="nav-link dropdown-toggle" href="../survey.html">
 						Đánh giá						</a>
 					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="https://blog.#/" target="_blank">
-						Blog						</a>
-					</li>
 				</ul>
 								<a class="navbar-btn btn btn-sm btn-danger ms-auto" href="../user/login.html">Đăng nhập</a>
 							</div>
@@ -147,7 +143,7 @@ gtag('config', 'G-P4QBSSV7TG');
 				</div>
 			</a>
 			<a class="card-body" href="start3bf4.html?template=6174ee7a7a1c7661fb0a671c">
-				<h3>Modern</h3>
+				<h3>Bảo Anh</h3>
 				<p class="mb-0 text-muted">Chủ đề hướng đến sự trẻ trung, tươi mới và tràn đầy năng lượng của tuổi trẻ. Mang đến cảm phóng khoáng, tự do không theo một khuôn khổ nhất định nào.</p>
 			</a>
 			<div class="card-meta mt-auto">
@@ -170,7 +166,7 @@ gtag('config', 'G-P4QBSSV7TG');
 				</div>
 			</a>
 			<a class="card-body" href="startd90f.html?template=6174ee5134c46827c45a50e5">
-				<h3>Minimalism</h3>
+				<h3>A nhân</h3>
 				<p class="mb-0 text-muted">Yêu những điều giản dị và thuần khiết. Bắt trọn hạnh phúc trong từng khoảnh khắc. Chủ nghĩa tối giản lấy màu trắng là màu chủ đạo và sắc xanh tạo điểm nhấn.</p>
 			</a>
 			<div class="card-meta mt-auto">
