--- a/preview.html
+++ b/preview.html
@@ -69,7 +69,7 @@
               " data-type="heading" data-background-type="none" data-border-enable="false" data-shadow-enable="false" data-text-shadow-enable="false">
                                         <div class="zn-element zn-lg  ">
                                             <h2 id="" class="zn-heading " data-element-animation="" data-scroll-animation="">
-                                                <h1 style="color:#fff">Huy Hùng &amp; Việt Hoài</h1>
+                                                <h1 style="color:#fff">Huy Hùng &amp; Yến Nhi</h1>
 													<h2>22/02/2022</h2>
                                             </h2>
                                         </div>
